🔥(CICD):  Removed job dependency

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,29 @@ jobs:
           count: 1
           labels: "scope:ai, scope:cicd, scope:github-repo, scope:db, scope:frontend,scope:backend"
 
-  
+  Lint-Test:
+    name: Attempt to lints all code in the repository
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout to develop branch
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+
+      - name: Install all backend package dependencies
+        run:  |
+          yarn
+          cd client
+          yarn
+
+      - name: Run the linter and attempt to fix errors
+        run: yarn lint:fix
 
   Frontend:
     name: Testing and building of frontend
@@ -115,34 +137,3 @@ jobs:
         with:
           name: backend-artifact
           path: coverage/
-
-  Lint-and-Format:
-    name: Attempt to lints and format all code in the repository
-    needs: [Frontend, Backend]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout to develop branch
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
-
-      - name: Install all backend package dependencies
-        run:  |
-          yarn
-          cd client
-          yarn
-
-      - name: Run the linter and attempt to fix errors
-        run: yarn lint:fix
-
-      # - name: Run Prettier and fomat the code
-      #   uses: creyD/prettier_action@v4.2
-      #   with:
-      #     prettier_options: --write . --config .prettierrc
-      #     commit_message: "🎨(CICD): All code has been formatted!"
