--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   Serverless-Deploy:
+    name: Deploying Twitter Summariser to AWS
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
 
@@ -16,7 +17,7 @@ jobs:
       - name: Checkout to develop/master branch
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: "14.x"
@@ -30,7 +31,7 @@ jobs:
       - name: Install package dependencies for backend
         run: yarn
 
-      - name: Serverless deploy
+      - name: Serverless Deploy
         uses: serverless/github-action@v3
         with:
           args: deploy
@@ -44,7 +45,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          npm i -g aws-cli
-          npm i -g aws-sdk
           npm i @aws-cdk/aws-cloudfront
           aws cloudfront create-invalidation --distribution-id E23Y7FN0JRVKIU --paths "/*" 
