--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bcryptjs": "^2.4.3",
         "chai": "^4.3.6",
         "dotenv": "^16.0.1",
+        "jsonwebtoken": "^8.5.1",
         "lambda-tester": "^4.0.1",
         "superagent": "^7.1.6",
         "twitter-v2": "^1.1.0"
