--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^16.11.33",
 		"@types/react": "^18.0.8",
 		"@types/react-dom": "^18.0.3",
+		"aos": "^2.3.4",
 		"axios": "^0.27.2",
 		"eslint-config-react-app": "^7.0.1",
 		"react": "^18.1.0",
