--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         run:  yarn
 
       - name: Run frontend tests
-        run:  yarn test --coverage --watchAll=false
+        run:  CI=false yarn test --coverage --watchAll=false
 
       - name: Build the React App
         run:  yarn run build
