--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,10 +49,10 @@ jobs:
       - name: Install all frontend package dependencies
         run:  yarn
 
-      - name: Run frontend tests
-        run:  yarn test --coverage --watchAll=false
-        env:
-          CI: false
+      # - name: Run frontend tests
+      #   run:  yarn test --coverage --watchAll=false
+      #   env:
+      #     CI: false
 
       - name: Build the React App
         run:  yarn run build
