--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Install all frontend package dependencies
         run:  |
+          cd client
           yarn
           yarn test --coverage --watchAll=false
 
