💚 ⏪ (CICD): Reverted changes in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
   Frontend:
     name: Testing and building of frontend
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
 
     steps:
       - name: Checkout to develop branch
@@ -44,16 +47,10 @@ jobs:
           cache: 'yarn'
 
       - name: Install all frontend package dependencies
-        run:  |
-          cd client
-          yarn
-          yarn test --coverage --watchAll=false
+        run:  yarn
 
-
-      # - name: Run frontend tests
-      #   run:  yarn test --coverage --watchAll=false
-      #   env:
-      #     CI: false
+      - name: Run frontend tests
+        run:  yarn test --coverage --watchAll=false
 
       - name: Build the React App
         run:  yarn run build
