--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,82 +1,69 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint",
-        "react-hooks",
-        "prettier"
-    ],
-    "rules": {
-        "no-plusplus": "off",
-        "no-underscore-dangle": "off",
-        "prefer-regex-literals": "off",
-        "react/react-in-jsx-scope": "off",
-        "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": [
-            "error"
-        ],
-        "react/jsx-filename-extension": [
-            "warn",
-            {
-                "extensions": [
-                    ".tsx"
-                ]
-            }
-        ],
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
-        "no-shadow": "off",
-        "@typescript-eslint/no-shadow": [
-            "error"
-        ],
-        "react-hooks/rules-of-hooks": "error",
-        "import/prefer-default-export": "off",
-        "react/prop-types": "off",
-        "no-duplicate-imports": "error",
-        "no-empty": "error",
-        "no-console": "error",
-        "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-explicit-any": "off",
-        "react/destructuring-assignment": "off",
-        "no-unused-expressions": "off",
-        "@typescript-eslint/no-unused-expressions": "off",
-        "no-param-reassign": "off",
-        "no-useless-constructor": "off",
-        "@typescript-eslint/no-useless-constructor": [
-            "error"
-        ],
-        "no-restricted-syntax": "off",
-        "react-hooks/exhaustive-deps": "off"
-    },
-    "settings": {
-        "import/resolver": {
-            "typescript": {}
-        }
-    }
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"plugin:@typescript-eslint/recommended",
+		"prettier"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
+	"rules": {
+		"no-plusplus": "off",
+		"no-underscore-dangle": "off",
+		"prefer-regex-literals": "off",
+		"react/react-in-jsx-scope": "off",
+		"no-use-before-define": "off",
+		"@typescript-eslint/no-use-before-define": ["error"],
+		"react/jsx-filename-extension": [
+			"warn",
+			{
+				"extensions": [".tsx"]
+			}
+		],
+		"import/extensions": [
+			"error",
+			"ignorePackages",
+			{
+				"js": "never",
+				"jsx": "never",
+				"ts": "never",
+				"tsx": "never"
+			}
+		],
+		"no-shadow": "off",
+		"@typescript-eslint/no-shadow": ["error"],
+		"react-hooks/rules-of-hooks": "error",
+		"import/prefer-default-export": "off",
+		"react/prop-types": "off",
+		"no-duplicate-imports": "error",
+		"no-empty": "error",
+		"no-console": "error",
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-explicit-any": "off",
+		"react/destructuring-assignment": "off",
+		"no-unused-expressions": "off",
+		"@typescript-eslint/no-unused-expressions": "off",
+		"no-param-reassign": "off",
+		"no-useless-constructor": "off",
+		"@typescript-eslint/no-useless-constructor": ["error"],
+		"no-restricted-syntax": "off",
+		"react-hooks/exhaustive-deps": "off"
+	},
+	"settings": {
+		"import/resolver": {
+			"typescript": {}
+		}
+	}
 }
