--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,62 @@
-name: "Twitter Summariser CI"
+name: Twitter Summariser Build
 
 on:
   pull_request:
     types: [opened, reopened, labeled, synchronize]
 
 jobs:
-  lint-and-format:
-    name: Attempt to lints and format all code in the repository
+  Milestone-Check:
+    name: Checks if milestone is used
+    runs-on: ubuntu-latest
+    steps:
+      - name: Has milestone check
+        if: github.event.pull_request.milestone == null
+        run: |
+          echo "you don't have a milestone"
+          exit 1
+
+  Label-Check:
+    name: Checks if labels are used
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout to develop branch
+      - name: Checking out to the develop branch
         uses: actions/checkout@v2
+
+      - name: Has atleast one priority label
+        uses: mheap/github-action-required-labels@v1
         with:
-          ref: ${{ github.head_ref }}
+          mode: minimum
+          count: 1
+          labels: "priority:high, priority:low, priority:medium"
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Has atleast one type label
+        uses: mheap/github-action-required-labels@v1
         with:
-          node-version: "14.x"
+          mode: minimum
+          count: 1
+          labels: "type:bug, type:change, type:documentation, type:enhance, type:fix, type:meeting, type:test"
 
-      - name: Install all backend package dependencies
-        run:  |
-          yarn
-          cd client
-          yarn
+      - name: Has atleast one status label
+        uses: mheap/github-action-required-labels@v1
+        with:
+          mode: minimum
+          count: 1
+          labels: "status:needs-tests, status:not-ready, status:ready"
 
-      - name: Run the linter and attempt to fix errors
-        run: yarn lint:fix
+      - name: Has atleast one role label
+        uses: mheap/github-action-required-labels@v1
+        with:
+          mode: minimum
+          count: 1
+          labels: "role:frontend-engineer, role:business-analyst, role:backend-engineer, role:dev-op, role:team-lead, role:tester, role:designer"
+
+      - name: Has atleast one scope label
+        uses: mheap/github-action-required-labels@v1
+        with:
+          mode: minimum
+          count: 1
+          labels: "scope:ai, scope:cicd, scope:github-repo, scope:db, scope:frontend,scope:backend"
 
   Frontend:
     name: Testing and building of frontend
