--- a/client/package.json
+++ b/client/package.json
@@ -32,13 +32,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --watchAll=false",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"eject": "react-scripts eject",
+		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+		"lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}"
 	},
 	"browserslist": {
 		"production": [
@@ -53,9 +49,17 @@
 		]
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.30.3",
-		"@typescript-eslint/parser": "^5.30.3",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
+		"eslint": "^8.20.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^3.3.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.13",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.0.24"
