--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
 		"test": "react-scripts test --watchAll=false",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-		"lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}"
+		"lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+		"format": "prettier --write src/** --config .prettierrc"
 	},
 	"browserslist": {
 		"production": [
