--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^16.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"lambda-tester": "^4.0.1",
+		"node-fetch": "^3.2.9",
 		"superagent": "^7.1.6",
 		"twitter-v2": "^1.1.0"
 	},
