--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,7 @@
 		"removeComments": true,
 		"sourceMap": true,
 		"target": "ES2020",
-		"outDir": "lib",
-		"module": "commonjs",
-    	"esModuleInterop": true
+		"outDir": "lib"
 	},
 	"include": ["src/**/*.ts", "serverless.ts"],
 	"exclude": [
