--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
 		"removeComments": true,
 		"sourceMap": true,
 		"target": "ES2020",
-		"outDir": "lib"
+		"outDir": "lib",
+		"resolveJsonModule": true,
+		"esModuleInterop": true
 	},
 	"include": ["src/**/*.ts", "serverless.ts"],
 	"exclude": [
