--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Serverless aws-nodejs-typescript template",
 	"main": "serverless.ts",
 	"scripts": {
-		"test": "jest --config jest.config.js",
+		"test": "jest --config jest.unit.config.js",
+		"test:int": "jest --config jest.int.config.js",
 		"format": "prettier --write . --config .prettierrc"
 	},
 	"engines": {
