🚚 (UI): Changed the manifest and icon of TS

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -31,6 +31,11 @@
 			"src": "maskable_icon_x384.png",
 			"type": "image/png",
 			"sizes": "384x384"
+		},
+		{
+			"src": "maskable_icon_x512.png",
+			"type": "image/png",
+			"sizes": "512x512"
 		}
 	],
 	"start_url": ".",
