🚚 (CICD): Renamed AWS credentials

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,4 +45,4 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
         run: |
           npm i @aws-cdk/aws-cloudfront
-          aws cloudfront create-invalidation --distribution-id E3GNTXRPNYODUM --paths "/*" 
+          aws cloudfront create-invalidation --distribution-id EFMUYOHRUH392 --paths "/*" 
