--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ on:
       - closed
 
 jobs:
-  Serverless-Deploy:
+  Twitter-Summariser:
+    name: Deployment of the Twitter Summariser
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
 
@@ -46,3 +47,34 @@ jobs:
         run: |
           npm i @aws-cdk/aws-cloudfront
           aws cloudfront create-invalidation --distribution-id E34HH3HI0FU2XJ --paths "/*" 
+
+  Text-Summarisation:
+    name: Deployment of the AI module
+    if: ${{ github.event.pull_request.merged }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: text-summarisation
+
+    steps:
+      - name: Checkout to develop/master branch
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+          cache: 'yarn'
+    
+      - name: Install package dependencies
+        run: |
+          cd ..
+          yarn
+
+      - name: Serverless Deploy to AWS
+        uses: serverless/github-action@v3
+        with:
+          args: deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
