--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install package dependencies for backend
         run: yarn
 
-      - name: Serverless Deploy to AWS
+      - name: Twitter Summarisee Deploy to AWS
         uses: serverless/github-action@v3
         with:
           args: deploy
@@ -52,9 +52,6 @@ jobs:
     name: Deployment of the AI module
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: text-summarisation
 
     steps:
       - name: Checkout to develop/master branch
@@ -67,14 +64,12 @@ jobs:
           cache: 'yarn'
     
       - name: Install package dependencies
-        run: |
-          cd ..
-          yarn
+        run:  yarn
 
-      - name: Serverless Deploy to AWS
+      - name: AI mddule Deploy to AWS
         uses: serverless/github-action@v3
         with:
-          args: deploy
+          args: -c "cd ./text-summarisation && serverless deploy"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
