--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Serverless Deploy
 
 on:
   pull_request:
-    branches: [develop, master]
+    branches: [developV2, master]
     types:
       - closed
 
