--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@serverless/typescript": "^3.21.0"
+    "@serverless/typescript": "^3.21.0",
+    "serverless-offline": "^9.1.7"
   }
 }
