--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,6 +10,9 @@ jobs:
   on-success:
     name: Upload code coverage to codecov
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Twitter-Summariser
 
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
