--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,37 +45,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      # - name: Invalidating Cloudfrount S3 Cache
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     AWS_DEFAULT_REGION: us-east-1
-      #   run: |
-      #     npm i @aws-cdk/aws-cloudfront
-      #     aws cloudfront create-invalidation --distribution-id E34HH3HI0FU2XJ --paths "/*" 
-
-  # Text-Summarisation:
-  #   name: Deployment of the AI module
-  #   if: ${{ github.event.pull_request.merged }}
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout to develop/master branch
-  #       uses: actions/checkout@v2
-
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: "14.x"
-  #         cache: 'yarn'
-    
-  #     - name: Install package dependencies
-  #       run:  yarn
-
-  #     - name: AI mddule Deploy to AWS
-  #       uses: serverless/github-action@v3
-  #       with:
-  #         args: -c "cd ./text-summarisation && serverless deploy"
-  #       env:
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Invalidating Cloudfrount S3 Cache
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+        run: |
+          npm i @aws-cdk/aws-cloudfront
+          aws cloudfront create-invalidation --distribution-id E373IG4EJTQHZ8 --paths "/*" 
