--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
 		"@types/node": "^14.14.25",
 		"@types/superagent": "^4.1.15",
 		"esbuild": "^0.14.11",
+		"file-type": "^17.1.6",
 		"glob": "^8.0.3",
 		"jest": "^28.1.0",
 		"json-schema-to-ts": "^1.5.0",
