--- a/app/client/package.json
+++ b/app/client/package.json
@@ -32,6 +32,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --watchAll=false",
+		"test:e2e": "cypress open",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
 		"lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
@@ -53,6 +54,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
+		"cypress": "^10.6.0",
 		"eslint": "^8.20.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^8.5.0",
@@ -61,6 +63,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"jest": "^28.1.3",
 		"postcss": "^8.4.13",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.0.24"
