--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,18 +20,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-          cache: 'yarn'
+          cache: "yarn"
 
       - name: Install serverless compose dependencies
         run: yarn
 
       - name: Build the Twitter Summariser App
-        run:  |
+        run: |
           cd app
           cd client
           yarn
           CI=false yarn run build
-    
+
       - name: Install package dependencies for backend
         run: |
           cd app
@@ -45,11 +45,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Invalidating Cloudfrount S3 Cache
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-        run: |
-          npm i @aws-cdk/aws-cloudfront
-          aws cloudfront create-invalidation --distribution-id E3I6IBU2BQGOKP --paths "/*" 
+      # - name: Invalidating Cloudfrount S3 Cache
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: us-east-1
+      #   run: |
+      #     npm i @aws-cdk/aws-cloudfront
+      #     aws cloudfront create-invalidation --distribution-id E3I6IBU2BQGOKP --paths "/*"
