--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,6 +13,7 @@
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
 		"eslint-config-react-app": "^7.0.1",
+		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
