--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
           python-version: '3.8'
 
       - name: Install serverless compose dependencies
-        run: yarn
+        run: |
+          yarn
+          sudo apt-get install -y python3.8
 
       - name: Build the Twitter Summariser App
         run: |
