--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Add Serverless python file
         run: |
           cd lib
+          sudo apt-get install python3.8
           sls plugin install -n serverless-python-requirements
 
       - name: Deployment of All Infrastructures to AWS
