--- a/app/client/package.json
+++ b/app/client/package.json
@@ -12,6 +12,7 @@
 		"@types/react-dom": "^18.0.3",
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
+		"bcryptjs": "^2.4.3",
 		"eslint-config-react-app": "^7.0.1",
 		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
@@ -52,6 +53,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
