--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: "3.8"
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -42,7 +42,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Install serverless compose dependencies
-        run:  yarn
+        run: yarn
 
       - name: Build the Twitter Summariser App
         run: |
@@ -58,7 +58,7 @@ jobs:
       - name: Deployment of All Infrastructures to AWS
         uses: dhollerbach/actions.serverless-with-python-requirements@master
         with:
-          args: ''
+          args: ""
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
