--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -1,2 +1,5 @@
-numpy==1.23.2
-pandas==1.4.3
+https://download.pytorch.org/whl/cpu/torch-1.12.0%2Bcpu-cp38-cp38-linux_x86_64.whl
+sentencepiece==0.1.97
+tokenizers==0.12.1
+tqdm==4.64.0
+transformers==4.21.1
