--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@serverless/typescript": "^3.21.0",
+    "serverless-plugin-warmup": "^8.0.0",
     "serverless-python-requirements": "^5.4.0"
   }
 }
