--- a/app/client/package.json
+++ b/app/client/package.json
@@ -16,6 +16,8 @@
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
+		"crypto-js": "^4.1.1",
+		"crypto-ts": "^1.0.2",
 		"eslint-config-react-app": "^7.0.1",
 		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
@@ -57,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
+		"@types/crypto-js": "^4.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
