--- a/app/client/.eslintrc.json
+++ b/app/client/.eslintrc.json
@@ -44,6 +44,7 @@
 				"extensions": [".js", ".jsx", ".ts", ".tsx"]
 			}
 		],
+		"react/unknown-property": "off",
 		"import/no-extraneous-dependencies": [
 			"error",
 			{
