--- a/app/client/package.json
+++ b/app/client/package.json
@@ -24,6 +24,7 @@
 		"react-icons": "^4.3.1",
 		"react-router-dom": "6",
 		"react-scripts": "^5.0.1",
+		"react-spinners": "^0.13.4",
 		"react-twitter-widgets": "^1.10.0",
 		"typescript": "^4.6.4",
 		"web-vitals": "^2.1.4",
