--- a/app/client/package.json
+++ b/app/client/package.json
@@ -61,6 +61,7 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"@types/crypto-js": "^4.1.1",
+		"@types/react-datetime-picker": "^3.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
@@ -76,6 +77,7 @@
 		"jest": "^28.1.3",
 		"postcss": "^8.4.13",
 		"prettier": "^2.7.1",
+		"react-datetime-picker": "^3.5.0",
 		"tailwindcss": "^3.0.24"
 	}
 }
