--- a/app/client/package.json
+++ b/app/client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@coreui/react": "^4.3.1",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@mui/material": "^5.10.3",
