--- a/app/client/package.json
+++ b/app/client/package.json
@@ -8,6 +8,7 @@
 		"@emotion/styled": "^11.10.4",
 		"@fortawesome/fontawesome-svg-core": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@mui/material": "^5.10.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
