--- a/app/client/package.json
+++ b/app/client/package.json
@@ -6,6 +6,8 @@
 		"@coreui/react": "^4.3.1",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
+		"@headlessui/react": "^1.7.1",
+		"@heroicons/react": "^2.0.11",
 		"@mui/material": "^5.10.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
@@ -18,6 +20,9 @@
 		"axios": "^0.27.2",
 		"crypto-js": "^4.1.1",
 		"eslint-config-react-app": "^7.0.1",
+		"flowbite": "^1.5.3",
+		"flowbite-react": "^0.1.11",
+		"heroicons-react": "^1.4.1",
 		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
