--- a/lib/text-extraction/package.json
+++ b/lib/text-extraction/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "express": "^4.18.1",
     "serverless-http": "^3.0.2"
+  },
+  "dependencies": {
+    "express-fileupload": "^1.4.0",
+    "pdf-parse": "^1.1.1"
   }
 }
