--- a/lib/text-extraction/package.json
+++ b/lib/text-extraction/package.json
@@ -9,12 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.18.1",
-    "serverless-http": "^3.0.2"
-  },
   "dependencies": {
+    "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "serverless-http": "^3.0.2"
   }
 }
