--- a/app/client/package.json
+++ b/app/client/package.json
@@ -14,7 +14,7 @@
 		"@testing-library/react": "^13.2.0",
 		"@testing-library/user-event": "^14.3.0",
 		"@types/jest": "^28.1.6",
-		"@types/node": "^18.0.6",
+		"@types/node": "^18.7.18",
 		"@types/react": "^18.0.8",
 		"@types/react-dom": "^18.0.3",
 		"aos": "^2.3.4",
@@ -43,6 +43,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test --watchAll=false",
 		"test:e2e": "cypress open",
+		"test:performance": "cypress open",
 		"eject": "react-scripts eject",
 		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
 		"lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
@@ -61,6 +62,8 @@
 		]
 	},
 	"devDependencies": {
+		"@cypress-audit/lighthouse": "^1.3.1",
+		"@cypress-audit/pa11y": "^1.3.1",
 		"@types/crypto-js": "^4.1.1",
 		"@types/react-datetime-picker": "^3.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
