--- a/app/client/package.json
+++ b/app/client/package.json
@@ -25,7 +25,9 @@
 		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-hot-toast": "^2.4.0",
 		"react-icons": "^4.3.1",
+		"react-notifications": "^1.7.4",
 		"react-router-dom": "6",
 		"react-scripts": "^5.0.1",
 		"react-spinners": "^0.13.4",
