--- a/app/client/package.json
+++ b/app/client/package.json
@@ -22,12 +22,14 @@
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
 		"crypto-js": "^4.1.1",
+		"docxtemplater": "^3.31.3",
 		"eslint-config-react-app": "^7.0.1",
 		"flowbite": "^1.5.3",
 		"flowbite-react": "^0.1.11",
 		"heroicons-react": "^1.4.1",
 		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
+		"pizzip": "^3.1.1",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-hot-toast": "^2.4.0",
@@ -72,6 +74,7 @@
 		"@cypress-audit/lighthouse": "^1.3.1",
 		"@cypress-audit/pa11y": "^1.3.1",
 		"@types/crypto-js": "^4.1.1",
+		"@types/pizzip": "^3.0.2",
 		"@types/react-datetime-picker": "^3.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
