--- a/app/client/package.json
+++ b/app/client/package.json
@@ -73,6 +73,7 @@
 	"devDependencies": {
 		"@cypress-audit/lighthouse": "^1.3.1",
 		"@cypress-audit/pa11y": "^1.3.1",
+		"@material-tailwind/react": "^1.2.4",
 		"@types/crypto-js": "^4.1.1",
 		"@types/pizzip": "^3.0.2",
 		"@types/react-datetime-picker": "^3.4.1",
