--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@material-tailwind/react": "^1.2.4",
     "@serverless/compose": "^1.3.0",
     "@serverless/typescript": "^3.21.0",
     "serverless-python-requirements": "^5.4.0"
