--- a/app/client/package.json
+++ b/app/client/package.json
@@ -21,6 +21,7 @@
 		"@types/react-dom": "^18.0.3",
 		"aos": "^2.3.4",
 		"axios": "^0.27.2",
+		"bootstrap": "^5.2.1",
 		"crypto-js": "^4.1.1",
 		"eslint-config-react-app": "^7.0.1",
 		"flowbite": "^1.5.3",
@@ -29,6 +30,7 @@
 		"idb": "^7.0.2",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
+		"react-bootstrap": "^2.5.0",
 		"react-dom": "^18.1.0",
 		"react-hot-toast": "^2.4.0",
 		"react-icons": "^4.3.1",
