--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
 		"lambda-tester": "^4.0.1",
 		"node-fetch": "^3.2.9",
 		"superagent": "^7.1.6",
+		"twitter-api-v2": "^1.12.7",
 		"twitter-v2": "^1.1.0"
 	},
 	"devDependencies": {
