--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,4 +76,4 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
         run: |
           npm i @aws-cdk/aws-cloudfront
-          aws cloudfront create-invalidation --distribution-id E3MBQEB43WX4PL --paths "/*"
+          aws cloudfront create-invalidation --distribution-id E1OC1UIHU1QLVC --paths "/*"
